修改cloneWeeklyGames.js能確認同時段不重複出現場次 測試修改多團的+1/-1處理

--- a/public/game_scheduler.html
+++ b/public/game_scheduler.html
@@ -342,12 +342,14 @@ function formatDate(date) {
     document.getElementById('gameForm').style.display = 'block';
     const form = document.getElementById('gameForm');
 
-    log(`openCreateGameForm ${game}`);
+    console.log(`openCreateGameForm ${game}`);
     form.reset();
 
     const input = document.getElementById('gameDate');
     const today = new Date();
-    
+    console.log('Script is running');
+    console.log('Taiwan time (Date):', today);
+
     const formatDate = (d) =>
       d.toISOString().split('T')[0];
 
